# Ragiologist_portal

./: Procfile  README.md  package-lock.json  pyproject.toml
.github/workflows/: ci.yml
radiologistis/: hooks.py  modules.txt
radiologistis/radiologistis/doctype/registration/: registration.js  registration.json  registration.py  test_registration.py
radiologistis/radiologistis/web_form/radiologist_registration/: radiologist_registration.json
