[project]
name = "radiologistis"
authors = [
    { name = "SAm", email = "lyetasamson@gmail.com"}
]
description = "app for radiologist to update image scan and give the cost for each scan"
requires-python = ">=3.10"
readme = "README.md"
dynamic = ["version"]
dependencies = [
    # "frappe~=15.0.0" # Installed and managed by bench.
]

[build-system]
requires = ["flit_core >=3.4,<4"]
build-backend = "flit_core.buildapi"

# These dependencies are only installed when developer mode is enabled
[tool.bench.dev-dependencies]
# package_name = "~=1.1.0"
